--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="container">
                 <div class="wrapper">
                     <div class="image">
-                        <img src="/imgs/blog-img.png" alt="">
+                        <img src="./imgs/blog-img.png" alt="">
                     </div>
                     <div class="blog-text">
                         <h2>a little more about Kalay</h2>
@@ -130,13 +130,13 @@
                 </div>
                 <div class="design-box">
                     <div class="design-card">
-                        <img src="/imgs/donate.jpg" alt="">
+                        <img src="./imgs/donate.jpg" alt="">
                     </div>
                     <div class="design-card">
-                        <img src="/imgs/tree.jpg" alt="">
+                        <img src="./imgs/tree.jpg" alt="">
                     </div>
                     <div class="design-card">
-                        <img src="/imgs/coffee.jpg" alt="">
+                        <img src="./imgs/coffee.jpg" alt="">
                     </div>
                 </div>
             </div>
